// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > should hide the toggle button if no onClick method 1`] = `
<div>
  <div
    class="flex flex-col gap-x-3 border-b transition-all duration-200 md:mb-4 md:rounded-xl md:border-0 md:ring-2 border-theme-secondary-300 ring-theme-primary-100 dark:border-theme-secondary-800 dark:bg-theme-background dark:ring-theme-secondary-800"
  >
    <div
      class="flex flex-row items-center py-6 px-8 select-none md:p-4 md:h-20 border-theme-secondary-300 dark:border-theme-secondary-800"
      data-testid="AccordionHeader"
    >
      <div
        class="flex flex-row items-center grow"
      >
        Header
      </div>
    </div>
    <div
      class="px-8 pb-6 md:px-4 md:pt-6 md:pb-0"
      data-testid="AccordionContent"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Button > should render 1`] = `
<div>
  <div
    class="flex flex-col gap-x-3 border-b transition-all duration-200 md:mb-4 md:rounded-xl md:border-0 md:ring-2 border-theme-secondary-300 ring-theme-primary-100 dark:border-theme-secondary-800 dark:bg-theme-background dark:ring-theme-secondary-800"
  >
    <div
      class="flex flex-row items-center py-6 px-8 cursor-pointer select-none md:p-4 md:h-20 group border-theme-secondary-300 dark:border-theme-secondary-800"
      data-testid="AccordionHeader"
    >
      <div
        class="flex flex-row items-center grow"
      >
        Header
      </div>
      <div
        class="flex items-center self-stretch ml-4 transition-all duration-100 not-all-hover-none:dark:group-hover:border-theme-secondary-700 shrink-0"
      >
        <div
          class="flex justify-center content-center items-center w-8 h-full rounded-lg ring-2 transition-all sm:h-8 text-theme-secondary-700 ring-theme-primary-100 not-all-hover-none:transition-colors not-all-hover-none:duration-100 not-all-hover-none:ease-linear not-all-hover-none:hover:bg-theme-primary-100 not-all-hover-none:hover:text-theme-primary-700 not-all-hover-none:hover:ring-theme-primary-100 not-all-hover-none:dark:hover:bg-theme-secondary-800 not-all-hover-none:dark:hover:text-white not-all-hover-none:dark:hover:ring-theme-secondary-800 min-h-8 basis-8 dark:text-theme-secondary-500 dark:ring-theme-secondary-700"
          data-testid="Accordion__toggle"
        >
          <div
            class="transition-transform"
          >
            <div
              style="height: 10px; width: 10px;"
            >
              <svg
                id="chevron-down-small"
                style="height: 100%; width: 100%;"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-8 pb-6 md:px-4 md:pt-6 md:pb-0"
      data-testid="AccordionContent"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Button > should render collapsed 1`] = `
<div>
  <div
    class="flex flex-col gap-x-3 border-b transition-shadow duration-200 md:mb-4 md:rounded-xl md:border-0 md:ring-2 border-theme-secondary-300 not-all-hover-none:hover:shadow-xl not-all-hover-none:hover:ring-0 not-all-hover-none:hover:ring-theme-background not-all-hover-none:dark:hover:bg-theme-secondary-800 not-all-hover-none:dark:hover:shadow-none not-all-hover-none:dark:hover:ring-theme-secondary-800 ring-theme-primary-100 dark:border-theme-secondary-800 dark:bg-theme-background dark:ring-theme-secondary-800"
  >
    <div
      class="flex flex-row items-center py-6 px-8 cursor-pointer select-none md:p-4 md:h-20 group border-theme-secondary-300 dark:border-theme-secondary-800"
      data-testid="AccordionHeader"
    >
      <div
        class="flex flex-row items-center grow"
      >
        Header
      </div>
      <div
        class="flex items-center self-stretch ml-4 transition-all duration-100 not-all-hover-none:dark:group-hover:border-theme-secondary-700 shrink-0"
      >
        <div
          class="flex justify-center content-center items-center w-8 h-full rounded-lg ring-2 transition-all sm:h-8 text-theme-secondary-700 ring-theme-primary-100 not-all-hover-none:transition-colors not-all-hover-none:duration-100 not-all-hover-none:ease-linear not-all-hover-none:hover:bg-theme-primary-100 not-all-hover-none:hover:text-theme-primary-700 not-all-hover-none:hover:ring-theme-primary-100 not-all-hover-none:dark:hover:bg-theme-secondary-800 not-all-hover-none:dark:hover:text-white not-all-hover-none:dark:hover:ring-theme-secondary-800 min-h-8 basis-8 dark:text-theme-secondary-500 dark:ring-theme-secondary-700"
          data-testid="Accordion__toggle"
        >
          <div
            class="transition-transform"
          >
            <div
              style="height: 10px; width: 10px;"
            >
              <svg
                id="chevron-down-small"
                style="height: 100%; width: 100%;"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-8 pb-6 md:px-4 md:pt-6 md:pb-0"
      data-testid="AccordionContent"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Button > should render expanded 1`] = `
<div>
  <div
    class="flex flex-col gap-x-3 border-b transition-all duration-200 md:mb-4 md:rounded-xl md:border-0 md:ring-2 border-theme-secondary-300 ring-theme-primary-100 dark:border-theme-secondary-800 dark:bg-theme-background dark:ring-theme-secondary-800"
  >
    <div
      class="flex flex-row items-center py-6 px-8 cursor-pointer select-none md:p-4 md:h-20 md:border-b border-theme-secondary-300 dark:border-theme-secondary-800"
      data-testid="AccordionHeader"
    >
      <div
        class="flex flex-row items-center grow"
      >
        Header
      </div>
      <div
        class="flex items-center self-stretch ml-4 not-all-hover-none:dark:group-hover:border-theme-secondary-700 shrink-0"
      >
        <div
          class="flex justify-center content-center items-center w-8 h-full rounded-lg ring-2 transition-all sm:h-8 text-theme-secondary-700 ring-theme-primary-100 not-all-hover-none:transition-colors not-all-hover-none:duration-100 not-all-hover-none:ease-linear not-all-hover-none:hover:bg-theme-primary-100 not-all-hover-none:hover:text-theme-primary-700 not-all-hover-none:hover:ring-theme-primary-100 not-all-hover-none:dark:hover:bg-theme-secondary-800 not-all-hover-none:dark:hover:text-white not-all-hover-none:dark:hover:ring-theme-secondary-800 min-h-8 basis-8 dark:text-theme-secondary-500 dark:ring-theme-secondary-700"
          data-testid="Accordion__toggle"
        >
          <div
            class="transition-transform rotate-180"
          >
            <div
              style="height: 10px; width: 10px;"
            >
              <svg
                id="chevron-down-small"
                style="height: 100%; width: 100%;"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-8 pb-6 md:px-4 md:pt-6 md:pb-0"
      data-testid="AccordionContent"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Button > should render inactive 1`] = `
<div>
  <div
    class="flex flex-col gap-x-3 border-b transition-all duration-200 md:mb-4 md:rounded-xl md:border-0 md:ring-1 border-theme-secondary-300 ring-theme-secondary-300 dark:border-theme-secondary-800 dark:bg-theme-background dark:ring-theme-secondary-800"
  >
    <div
      class="flex flex-row items-center py-6 px-8 cursor-pointer select-none md:p-4 md:h-20 group border-theme-secondary-300 dark:border-theme-secondary-800"
      data-testid="AccordionHeader"
    >
      <div
        class="flex flex-row items-center grow"
      >
        Header
      </div>
      <div
        class="flex items-center self-stretch ml-4 transition-all duration-100 not-all-hover-none:dark:group-hover:border-theme-secondary-700 shrink-0"
      >
        <div
          class="flex justify-center content-center items-center w-8 h-full rounded-lg ring-2 transition-all sm:h-8 text-theme-secondary-700 ring-theme-primary-100 not-all-hover-none:transition-colors not-all-hover-none:duration-100 not-all-hover-none:ease-linear not-all-hover-none:hover:bg-theme-primary-100 not-all-hover-none:hover:text-theme-primary-700 not-all-hover-none:hover:ring-theme-primary-100 not-all-hover-none:dark:hover:bg-theme-secondary-800 not-all-hover-none:dark:hover:text-white not-all-hover-none:dark:hover:ring-theme-secondary-800 min-h-8 basis-8 dark:text-theme-secondary-500 dark:ring-theme-secondary-700"
          data-testid="Accordion__toggle"
        >
          <div
            class="transition-transform"
          >
            <div
              style="height: 10px; width: 10px;"
            >
              <svg
                id="chevron-down-small"
                style="height: 100%; width: 100%;"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="px-8 pb-6 md:px-4 md:pt-6 md:pb-0"
      data-testid="AccordionContent"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`Button > should render skeleton wrapper 1`] = `
<div>
  <div
    class="flex items-center py-4 px-8 h-20 md:px-4"
    data-testid="AccordionHeaderSkeletonWrapper"
  >
    content
    <div
      class="flex items-center pl-4 h-full border-theme-secondary-300 dark:border-theme-secondary-800 dark:group-hover:border-theme-secondary-700"
    >
      <div
        class="flex justify-center content-center items-center w-8 h-8 rounded-lg ring-1 bg-theme-background text-theme-secondary-500 ring-theme-secondary-300 dark:text-theme-secondary-700 dark:ring-theme-secondary-800"
      >
        <div>
          <div
            style="height: 10px; width: 10px;"
          >
            <svg
              id="chevron-down-small"
              style="height: 100%; width: 100%;"
              viewBox="0 0 10 10"
              x="0"
              xml:space="preserve"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <path
                d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button > should toggle the accordion on click 1`] = `
<div>
  <div
    class="flex flex-col gap-x-3 border-b transition-all duration-200 md:mb-4 md:rounded-xl md:border-0 md:ring-2 border-theme-secondary-300 ring-theme-primary-100 dark:border-theme-secondary-800 dark:bg-theme-background dark:ring-theme-secondary-800"
  >
    <div
      class="flex flex-row items-center py-6 px-8 cursor-pointer select-none md:p-4 md:h-20 group border-theme-secondary-300 dark:border-theme-secondary-800"
      data-testid="AccordionHeader"
    >
      <div
        class="flex flex-row items-center grow"
      >
        Header
      </div>
      <div
        class="flex items-center self-stretch ml-4 transition-all duration-100 not-all-hover-none:dark:group-hover:border-theme-secondary-700 shrink-0"
      >
        <div
          class="flex justify-center content-center items-center w-8 h-full rounded-lg ring-2 transition-all sm:h-8 text-theme-secondary-700 ring-theme-primary-100 not-all-hover-none:transition-colors not-all-hover-none:duration-100 not-all-hover-none:ease-linear not-all-hover-none:hover:bg-theme-primary-100 not-all-hover-none:hover:text-theme-primary-700 not-all-hover-none:hover:ring-theme-primary-100 not-all-hover-none:dark:hover:bg-theme-secondary-800 not-all-hover-none:dark:hover:text-white not-all-hover-none:dark:hover:ring-theme-secondary-800 min-h-8 basis-8 dark:text-theme-secondary-500 dark:ring-theme-secondary-700"
          data-testid="Accordion__toggle"
        >
          <div
            class="transition-transform"
          >
            <div
              style="height: 10px; width: 10px;"
            >
              <svg
                id="chevron-down-small"
                style="height: 100%; width: 100%;"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
